@@ -3,10 +3,12 @@ package com.skaeht.synapse.controller;
 import com.skaeht.synapse.dto.request.PasswordUpdateRequest;
 import com.skaeht.synapse.dto.response.UserProfileResponse;
 import com.skaeht.synapse.entity.User;
+import com.skaeht.synapse.exception.ResourceNotFoundException;
 import com.skaeht.synapse.repository.UserRepository;
 import com.skaeht.synapse.service.UserService;
+import com.skaeht.synapse.util.SecurityUtil;
 import jakarta.validation.Valid;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
@@ -15,83 +17,57 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/users")
+@RequiredArgsConstructor
 public class UserController {
 
-    @Autowired
-    private UserService userService;
+    private final UserService userService;
+    private final PasswordEncoder passwordEncoder;
+    private final UserRepository userRepository;
 
-    @Autowired
-    private PasswordEncoder passwordEncoder;
-
-    @Autowired
-    private UserRepository userRepository;
-
-    /** Get the current authenticated user's profile (includes displayId). */
     @GetMapping("/me")
     public ResponseEntity<UserProfileResponse> getCurrentUser(Authentication authentication) {
-        // FIX: The JWT Subject (authentication.getName()) is the user's EMAIL, not their username.
-        String email = authentication.getName();
-        Optional<User> userOpt = userService.findByEmail(email);
+        String email = SecurityUtil.getCurrentUserEmail(authentication);
 
-        if (userOpt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-        }
+        User user = userService.findByEmail(email)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
-        User user = userOpt.get();
         return ResponseEntity.ok(new UserProfileResponse(
-                user.getId(),
-                user.getUsername(),
-                user.getEmail(),
-                user.getDisplayId()));
+                user.getId(), user.getUsername(), user.getEmail(), user.getDisplayId()));
     }
 
     /**
-     * Look up a user by their display ID — used to validate invite targets.
-     * Returns only the username (no sensitive data).
+     * Looks up a user by display ID. Exposed for invite validation.
+     * Returns minimal data (username only) to prevent data leakage.
      */
     @GetMapping("/by-display-id/{displayId}")
     public ResponseEntity<Map<String, String>> getUserByDisplayId(@PathVariable String displayId) {
-        Optional<User> userOpt = userService.findByDisplayId(displayId);
-        if (userOpt.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-        // Only expose the username, not email or internal ID
-        return ResponseEntity.ok(Map.of("username", userOpt.get().getUsername()));
+        User user = userService.findByDisplayId(displayId)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+
+        return ResponseEntity.ok(Map.of("username", user.getUsername()));
     }
 
-    /** Update password. */
     @PutMapping("/me/password")
     public ResponseEntity<String> updatePassword(Authentication authentication,
                                                  @Valid @RequestBody PasswordUpdateRequest request) {
-        String email = authentication.getName();
-        Optional<User> userOpt = userService.findByEmail(email);
-
-        if (userOpt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("User not found");
-        }
-
-        User user = userOpt.get();
+        String email = SecurityUtil.getCurrentUserEmail(authentication);
+        User user = userService.findByEmail(email)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
         if (!passwordEncoder.matches(request.currentPassword(), user.getPassword())) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Incorrect current password");
         }
 
-        // FIX: Pass the EMAIL, not the username!
         boolean updated = userService.updatePassword(email, request.newPassword());
-
-        if (updated) {
-            return ResponseEntity.ok("Password updated successfully");
-        } else {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to update password");
-        }
+        return updated
+                ? ResponseEntity.ok("Password updated successfully")
+                : ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to update password");
     }
 
-    /** Update username. */
     @PutMapping("/me/username")
     public ResponseEntity<String> updateUsername(Authentication authentication,
                                                  @RequestBody Map<String, String> request) {
@@ -100,36 +76,28 @@ public class UserController {
             return ResponseEntity.badRequest().body("Username must be at least 3 characters");
         }
 
-        String email = authentication.getName();
-        Optional<User> userOpt = userService.findByEmail(email);
+        String email = SecurityUtil.getCurrentUserEmail(authentication);
+        User user = userService.findByEmail(email)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
-        if (userOpt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("User not found");
-        }
-
-        User user = userOpt.get();
-
-        // Prevent unnecessary DB calls if the user is just submitting their existing name
+        // Short-circuit to save a DB write if the name hasn't changed
         if (user.getUsername().equalsIgnoreCase(newUsername.trim())) {
             return ResponseEntity.ok("Username is already " + newUsername);
         }
 
-        // FIX: Pass the EMAIL, not the username, to match the Service method signature!
         boolean updated = userService.updateUsername(email, newUsername.trim());
-
-        if (updated) {
-            return ResponseEntity.ok("Username updated successfully");
-        } else {
-            return ResponseEntity.status(HttpStatus.CONFLICT).body("Username already taken");
-        }
+        return updated
+                ? ResponseEntity.ok("Username updated successfully")
+                : ResponseEntity.status(HttpStatus.CONFLICT).body("Username already taken");
     }
 
     @GetMapping("/search")
     public ResponseEntity<List<UserProfileResponse>> searchUsers(@RequestParam String query) {
-        List<User> rawUsers = userRepository.findByUsernameContainingIgnoreCase(query);
-        List<UserProfileResponse> safeUsers = rawUsers.stream()
+        List<UserProfileResponse> safeUsers = userRepository.findByUsernameContainingIgnoreCase(query)
+                .stream()
                 .map(user -> new UserProfileResponse(user.getId(), user.getUsername(), user.getEmail(), user.getDisplayId()))
-                .collect(Collectors.toList());
+                .toList();
+
         return ResponseEntity.ok(safeUsers);
     }
 }
